# your-brain-mri-visualization

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  make_kate_amygdala_wireframe.py  pyproject.toml  requirements.txt  stl_files_creation.sh
.github/workflows/: validate-contributions.yml
.ipynb_checkpoints/: README-checkpoint.md
contributions/_TEMPLATE/: README.md  build.py  manifest.yaml
contributions/anime/: README.md
contributions/schema/: manifest.schema.json
contributions/universes/: README.md
data/: README.md
example_data/: aseg.stats
gallery/: README.md
my-brain-models/kate_3scanners_2026/: 2018_ge_fspgr_subcortical.stl  2022_sie_t1se_subcortical.stl  2024_phi_3di_subcortical.stl  README.md
my-brain-models/subcortical/: amygdala.stl  brain_stem.stl  caudate.stl  corpus_collosum.stl  hippocampus.stl  optic_chiasm.stl  putamen.stl  thalamus.stl  ventricles.stl  vessels.stl
pipeline/: README.md  build_summary.py  run_fastsurfer_full.sh  run_fastsurfer_segonly.sh  run_fs_longitudinal.sh  run_synthseg_all.sh  scans.example.tsv  verify_batch.py
rendering/: README.md  animate.py  mesh_prep.py  presets.py  scene.py  style_glass_blender.py  style_wireframe_roi.py
scripts/: README.md  build_gallery.py  cross_method_corr.py  decompose_floor.py  fetch_data.py  tta_sweep_report.py  validate_contributions.py
tools/: README.md  qc_report.py  run_fastsurfer.sh  run_synthseg.sh  save_nii_named.sh  symmetry_test.py  verify_volumes.py
tutorials/: freesurfer_stats_to_csv.py  saving-brain-regions.ipynb
(+38 files in other folders)
